[gd_scene load_steps=8 format=2]

[ext_resource path="res://PNG/SpeciesOne.png" type="Texture" id=1]
[ext_resource path="res://BattleSystem/SpecieOne.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.2564, 10.2564 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 3.50639, 9.1915 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 8, 8 )

[node name="Species" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
scale = Vector2( 0.78, 0.78 )
shape = SubResource( 1 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 24, 8 )
rotation = 1.5528e-07
scale = Vector2( 2.28155, 0.870369 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 9.53674e-07, 1.90735e-06 )
rotation = 2.84217e-14
shape = SubResource( 6 )

[node name="Down" type="Area2D" parent="."]
position = Vector2( 8, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
shape = SubResource( 7 )

[node name="Up" type="Area2D" parent="."]
position = Vector2( 8, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
shape = SubResource( 8 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( -8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 9 )

[connection signal="body_entered" from="Right" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Down" to="." method="_on_Down_body_entered"]
[connection signal="body_entered" from="Up" to="." method="_on_Up_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
